feat(next-query): simplify repository creation and lifecycle